<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">
<TextView
    android:id="@+id/title_text"
    android:text="@string/app_title"
    style="@style/header_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    />
    <LinearLayout
        android:id="@+id/alpha_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16sp"
        android:baselineAligned="false">
    <LinearLayout
        android:id="@+id/rain_box"
        android:layout_width="0sp"
        android:layout_weight=".40"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="8sp"
        android:background="@drawable/border_box_primary_dark"
        >
        <TextView
            android:id="@+id/rain_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rain_title"
            android:textAlignment="center"
            style="@style/title_text"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
        <TextView
            android:id="@+id/rain_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            android:textAlignment="center"
            style="@style/title_text"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
        <TextView
            android:text="@string/alert"
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/alert_text_off"/>
        <Spinner
            android:id="@+id/rain_spinner"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            style="@style/alert_text_off"
            android:background="@drawable/border_box_spinner"
            />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/storm_box"
        android:layout_width="0sp"
        android:layout_weight=".40"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/border_box_primary_dark">
        <TextView
            android:id="@+id/storm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storm_title"
            android:textAlignment="center"
            style="@style/title_text"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
            <TextView
            android:id="@+id/storm_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            android:textAlignment="center"
            style="@style/title_text"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
            <TextView
                android:text="@string/alert"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/alert_text_off"/>
        <Spinner
            android:id="@+id/storm_spinner"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            style="@style/alert_text_off"
            android:background="@drawable/border_box_spinner"
            />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
   <LinearLayout
       android:id="@+id/bravo_box"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintTop_toBottomOf="@id/alpha_box"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginTop="16sp"
       android:baselineAligned="false">
       <LinearLayout
        android:id="@+id/snow_box"
        android:layout_width="0sp"
        android:layout_weight=".40"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="8sp"
        android:background="@drawable/border_box_primary_dark">
        <TextView
            android:id="@+id/snow_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snow_title"
            android:textAlignment="center"
            style="@style/title_text"
            />
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/border_box_primary"
               android:layout_margin="5dp">
           <TextView
            android:id="@+id/snow_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            android:textAlignment="center"
            style="@style/title_text"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/border_box_primary"
               android:layout_margin="5dp">
               <TextView
                   android:text="@string/alert"
                   android:layout_width="0dp"
                   android:layout_weight=".40"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   style="@style/alert_text_off"/>
           <Spinner
            android:id="@+id/snow_spinner"
               android:layout_width="0dp"
               android:layout_weight=".50"
               android:layout_height="wrap_content"
               style="@style/alert_text_off"
               android:background="@drawable/border_box_spinner"
               />
           </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/temperature_box"
        android:layout_width="0sp"
        android:layout_weight=".40"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/border_box_primary_dark"
        android:orientation="vertical">
        <TextView
            android:id="@+id/temperature_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_title"
            android:textAlignment="center"
            style="@style/title_text"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
        <TextView
            android:text="@string/max_title"
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content"
            style="@style/title_text"/>
            <TextView
            android:id="@+id/temp_max"
                android:layout_width="0dp"
                android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            android:textAlignment="center"
            style="@style/title_text"
           />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
        <TextView
            android:text="@string/min_title"
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content"
            style="@style/title_text"/>
        <TextView
            android:id="@+id/temp_min"
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            android:textAlignment="center"
            style="@style/title_text"
            />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box_primary"
            android:layout_margin="5dp">
            <TextView
                android:text="@string/alert"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/alert_text_off"/>
        <Spinner
            android:id="@+id/min_spinner"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            style="@style/alert_text_off"
            android:background="@drawable/border_box_spinner"
            />
        </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_primary"
                android:layout_margin="5dp">
                <TextView
                    android:text="@string/alert"
                    android:layout_width="0dp"
                    android:layout_weight=".40"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/alert_text_off"/>
        <Spinner
            android:id="@+id/max_spinner"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            style="@style/alert_text_off"
            android:background="@drawable/border_box_spinner"
            />
            </LinearLayout>
    </LinearLayout></LinearLayout>
<LinearLayout
    android:id="@+id/charlie_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:orientation="horizontal">
        <Button
            android:id="@+id/settings_button"
            android:layout_width="0sp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:textAlignment="center"
            style="@style/title_text"
            android:background="@drawable/border_box_settings_light"
            app:layout_constraintRight_toLeftOf="@id/account_button"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/account_button"
            android:layout_width="0sp"
            android:layout_weight=".40"
            android:layout_height="wrap_content"
            android:text="@string/account_button"
            android:textAlignment="center"
            style="@style/title_text"
            android:background="@drawable/border_box_settings_light"
            app:layout_constraintLeft_toRightOf="@id/settings_button"
            app:layout_constraintRight_toRightOf="parent" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>